<resources>
    <string name="app_name">ShortVideoMsg</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="like">Like</string>
    <string name="dislike">Dis</string>
    <string name="login_text">QQ Login</string>
    <string name="following">following</string>
    <string name="follow">follow</string>
    <string name="feed_detail_hint">GOGOGO</string>
    <string name="bookmark">bookmark</string>
    <string name="bookmarked">bookmarked</string>
    <string name="share">share</string>
    <string name="feed_detail_type_image_title">Post Detail</string>
    <string name="author">Author</string>
    <string name="feed_comment_empty">No comments Yet!</string>
    <string name="comment_hint">Yuppp!</string>
    <string name="comment_send">Send</string>
    <string name="comment_failed">Comment failed</string>
    <string name="capture_tips">Tap for pic, long for video</string>
    <string name="capture_permission_message">Need to grant permission</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="file_upload_failed">Upload failed</string>
    <string name="publish_title">Post</string>
    <string name="publish_hint">Say Something</string>
    <string name="add_tag">Add Tag</string>
    <string name="publish_exit_message">Content not being saved</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="tag_title">Choose tag</string>
    <string name="file_upload_cover_failed_message">Cover image upload failed!</string>
    <string name="file_upload_failed_message">File upload failed!</string>
    <string name="publish_post_success">Post publish success!</string>
    <string name="posting">Posting</string>
    <string name="publish">Publish</string>
    <string name="hot_feed">hot feed</string>
    <string name="no_data">No data</string>
    <string name="go_to_discover">Go to discover</string>
    <string name="people_watching"> people watching</string>
    <string name="fans_count">\nFans</string>
    <string name="like_count">\nLikes</string>
    <string name="follow_count">\nFollows</string>
    <string name="score_count">\nScores</string>
    <string name="fragment_my_feed">Feeds</string>
    <string name="fragment_my_comment">Comments</string>
    <string name="fragment_my_favorite">Favorites</string>
    <string name="fragment_my_history">History</string>
    <string name="logout">Log out</string>
    <string name="comment">comment</string>

    <string-array name="profile_tabs">
        <item>News</item>
        <item>Feeds</item>
        <item>Comments</item>
    </string-array>
</resources>
